# aw-physx

./: .distignore  .gitmodules  README.md  aw-physx-bindings.asd  aw-physx.asd  claw-physx-bindings.asd  claw-physx.asd
.github/workflows/: build.yaml
bindings/: aarch64-linux-android.lisp  x86_64-pc-linux-gnu.lisp  x86_64-pc-windows-gnu.lisp  x86_64-w64-mingw32.lisp
example/: example.lisp
src/: claw.lisp
src/lib/: CMakeLists.txt  adapter.aarch64-linux-android.cxx  adapter.c  adapter.x86_64-pc-linux-gnu.cxx  adapter.x86_64-pc-windows-gnu.cxx  adapter.x86_64-w64-mingw32.cxx  build.ps1  build.sh  vc16win64-clawed.xml
